[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/enemies/states/emerge.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/states/chase.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemies/states/idle.gd" type="Script" id=5]
[ext_resource path="res://scenes/enemies/states/die.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemies/states/roam.gd" type="Script" id=7]
[ext_resource path="res://scenes/enemies/states/attack.gd" type="Script" id=8]
[ext_resource path="res://scenes/enemies/states/ready_attack.gd" type="Script" id=9]
[ext_resource path="res://scenes/ui elements/HealthBar.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=2]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/sphere:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.3, 0.3, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/sphere/Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.7, 1.7, 1 ), Vector3( 0.1, 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/FireParticles/Red:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/FireParticles/Orange:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/FireParticles/Yellow:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawned"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/sphere:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 8.87655, 0.392292, 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 1.2, 1.2, 1.2 ), Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/sphere/Sprite3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.7, 1.7, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/FireParticles/Red:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/FireParticles/Orange:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/FireParticles/Yellow:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.0416667
loop = true

[sub_resource type="Animation" id=5]
loop = true

[sub_resource type="BoxShape" id=6]
resource_local_to_scene = true
extents = Vector3( 5.73054, 5.13756, 6.50066 )

[sub_resource type="SphereShape" id=7]
radius = 350.0

[sub_resource type="SphereMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.909804, 0.0509804, 0.0509804, 1 )

[node name="enemy" type="Area"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="roam" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="chase" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="attack" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="ready_attack" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="emerge" type="Node" parent="states"]
script = ExtResource( 1 )

[node name="die" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "emerge"
playback_default_blend_time = 0.1
anims/attack = SubResource( 1 )
anims/die = SubResource( 2 )
anims/emerge = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="sightline" type="RayCast" parent="body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
cast_to = Vector3( 0, 0, -350 )

[node name="HealthPoint" type="Position3D" parent="body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1.80636e-07, -4.13246 )

[node name="TruePos" type="Position3D" parent="body"]

[node name="HealthBar" parent="." instance=ExtResource( 11 )]

[node name="detect" type="Area" parent="."]
input_ray_pickable = false
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="detect"]
shape = SubResource( 7 )

[node name="reacquire" type="Timer" parent="."]
one_shot = true

[node name="retarget" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -5.4354, -6.51521, -6.30186, 10.8708, 13.0304, 12.6037 )

[node name="turn" type="Tween" parent="."]

[node name="target" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 8 )
material/0 = SubResource( 9 )
[connection signal="body_entered" from="." to="." method="entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="anim_finished"]
